# ai-vedio-production

./: .gitignore  README.md  ai_video_production.db  build-all.bat  build-all.ps1  build-backend.bat  build-backend.ps1  cache.py  components.json  database.py  dev-app-update.yml  electron-builder.yml  http_client.py  main.py  nuitka-crash-report.xml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
models/: __init__.py  api_config.py  asset.py  canvas.py  order.py  product.py  project.py  workflow.py
routers/: __init__.py  assets.py  canvas.py  dashboard.py  image_generation.py  orders.py  settings.py  workflows.py
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  main.ts
src/renderer/src/components/assets/: AssetList.vue  CategoryTree.vue  LoadProjectDialog.vue  NewProjectDialog.vue  ProjectSelector.vue  UploadDialog.vue
src/renderer/src/components/backend/: BackendLogViewer.vue
src/renderer/src/components/layout/: MainLayout.vue  Sidebar.vue  TitleBar.vue
src/renderer/src/components/orders/: OrderDialog.vue  OrderTable.vue
src/renderer/src/components/workflows/: CanvasNode.vue  CanvasSidebar.vue  (+7 more)
src/renderer/src/router/: index.ts
src/renderer/src/services/: api.ts  assets.ts  canvas.ts  dashboard.ts  imageGeneration.ts  orders.ts  products.ts  settings.ts  workflows.ts
src/renderer/src/types/: index.ts
src/renderer/src/views/: AssetsView.vue  ConnectionView.vue  DashboardView.vue  OrdersView.vue  SettingsView.vue  UpdateView.vue  WorkflowsView.vue
总结/: 项目规则.md
(+15 files in other folders)
